k8s/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      #      securityContext:
      #        runAsUser: 1000
      #        runAsGroup: 1000
      #        fsGroup: 1000
      containers:
        - name: linkding
          image: ghcr.io/sissbruecker/linkding:1.47.0 # {"$imagepolicy": "flux-system:linkding"}
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 32m
            limits:
              memory: 256Mi
              cpu: 256m
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 6
