k8s/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  selector:
    app: linkding
  type: ClusterIP
