k8s/linkding/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
  annotations:
    cert-manager.io/cluster-issuer: "local-ca"
    gethomepage.dev/description: Linkding
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: linkding.png
    gethomepage.dev/name: Linkding
spec:
  ingressClassName: nginx
  rules:
    - host: "linkding.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
  tls:
    - hosts:
        - linkding.local
    secretName: linkding-tls
